KAF-528: Add otel and resolve CVEs